tuxtype (1.7.4.dfsg1-2) UNRELEASED; urgency=low

  * Drop automake from build-depends. 
  * Install .mo files into /usr/share/locale/ so that translations become
    available. (Closes: #531753)

 -- Holger Levsen <holger@debian.org>  Thu, 21 May 2009 20:45:22 +0200

tuxtype (1.7.4.dfsg1-1) unstable; urgency=low

  * New upstream version (Closes: #528423) with lots of bug fixes and code
    cleanups, GNU gettext is used for internationalization, added themes and 
    translations for multiple additional Indic languages, improved font 
    handling (Closes: #489924, #497112), a new graphical keyboard hint system,
    rewritten phrase practice activity, fullscreen mode at native resolution.
  * Do not call autoreconf during the build anymore.
  * Drop 100-nynorsk-words.patch,110-ttf-sil-andika.patch and
    120_fix-null-pointer.patch as the issues have been resolved upstream.
  * Add ttf-bengali-fonts, ttf-devanagari-fonts, ttf-gujarati-fonts,
    ttf-kannada-fonts, ttf-oriya-fonts, ttf-punjabi-fonts, ttf-tamil-fonts,
    ttf-telugu-fonts to Recommends:.
  * Bump Standards-version to 3.8.1, no changes needed.
  * Switch packaging to svn-buildpackage.

 -- Holger Levsen <holger@debian.org>  Thu, 21 May 2009 11:28:01 +0200

tuxtype (1.5.17.dfsg1-4) unstable; urgency=low

  * Install .desktop file. (Closes: #509364) 
  * Removed .pc/.version from diff.

 -- Holger Levsen <holger@debian.org>  Thu, 08 Jan 2009 18:24:00 +0100

tuxtype (1.5.17.dfsg1-3) unstable; urgency=low

  * Include patches from Patrick Winnertz which prevent tuxtype from crashing
    if no wordlists are available and which fix the german keyboard
    definition. (Closes: #473618)
  * Remove tuxtype-data conflict on older versions of tuxtype.

 -- Holger Levsen <holger@debian.org>  Sun, 06 Jul 2008 19:26:17 +0200

tuxtype (1.5.17.dfsg1-2) unstable; urgency=low

  * Bump Standards-version to 3.8.0, no changes needed.
  * Patch the source to use 1.0 basic release of the ttf-sil-andika fonts and