@@ -1,3 +1,3 @@
-?package(tuxtype):needs="X11" section="Games/Action"\
-  icon="/usr/share/tuxtype/tuxtype.xpm" \
-  title="Tuxtype" command="/usr/games/tuxtype"
+?package(tuxtype):needs="X11" section="Education/Languages"\
+  icon="/usr/share/pixmaps/tuxtype.png" \
+  title="Tux Typing" command="/usr/games/tuxtype"
