@@ -1,2 +1,3 @@
 usr/games
 usr/share/tuxtype
+usr/share/applications
