@@ -1,235 +1,0 @@
-/* XPM */
-static char * tuxtype_xpm[] = {
-"32 32 200 2",
-"  	c #0E2552",
-". 	c #163A69",
-"+ 	c #225E8E",
-"@ 	c #1A4A7A",
-"# 	c #1E5A96",
-"$ 	c #1F6E9D",
-"% 	c #12326A",
-"& 	c #1A4E82",
-"* 	c #216A9A",
-"= 	c #1A4E8E",
-"- 	c #122696",
-"; 	c #163E6E",
-"> 	c #1E5EAE",
-", 	c #1A528E",
-"' 	c #123672",
-") 	c #164275",
-"! 	c #1E5E9E",
-"~ 	c #122E86",
-"{ 	c #1A529A",
-"] 	c #22568A",
-"^ 	c #25669E",
-"/ 	c #164687",
-"( 	c #1E5A9A",
-"_ 	c #1A5692",
-": 	c #2270A7",
-"< 	c #1F4E7E",
-"[ 	c #1E62A6",
-"} 	c #1A4672",
-"| 	c #112E5A",
-"1 	c #1E5282",
-"2 	c #164A8B",
-"3 	c #256AA4",
-"4 	c #1E5EAA",
-"5 	c #173A8A",
-"6 	c #22568E",
-"7 	c #1E5A9E",
-"8 	c #2266AE",
-"9 	c #225E9E",
-"0 	c #122E8A",
-"a 	c #183E88",
-"b 	c #226EBA",
-"c 	c #16427F",
-"d 	c #164682",
-"e 	c #122A8D",
-"f 	c #1E4A7A",
-"g 	c #1E4E82",
-"h 	c #1E528E",
-"i 	c #225A9E",
-"j 	c #1C80AE",
-"k 	c #123261",
-"l 	c #1E4E8A",
-"m 	c #226697",
-"n 	c #123A76",
-"o 	c #256AB1",
-"p 	c #123E7A",
-"q 	c #225EA2",
-"r 	c #26629E",
-"s 	c #1E5292",
-"t 	c #122E93",
-"u 	c #1A528A",
-"v 	c #163391",
-"w 	c #225A8A",
-"x 	c #122A92",
-"y 	c #16467E",
-"z 	c #1E4A7E",
-"A 	c #1E529A",
-"B 	c #2672C2",
-"C 	c #16427A",
-"D 	c #1A4A7E",
-"E 	c #265287",
-"F 	c #225282",
-"G 	c #1E568E",
-"H 	c #1E4672",
-"I 	c #1A4A86",
-"J 	c #1E5AA6",
-"K 	c #225A9A",
-"L 	c #163E72",
-"M 	c #162E8A",
-"N 	c #123A70",
-"O 	c #226AB6",
-"P 	c #1E4A82",
-"Q 	c #224E83",
-"R 	c #2266B6",
-"S 	c #226295",
-"T 	c #1E5692",
-"U 	c #1E4E8E",
-"V 	c #1E5EA2",
-"W 	c #225EA6",
-"X 	c #265A8A",
-"Y 	c #163285",
-"Z 	c #1B7BA1",
-"` 	c #2666B0",
-" .	c #1A5296",
-"..	c #266AB8",
-"+.	c #1D79A7",
-"@.	c #2262AE",
-"#.	c #123665",
-"$.	c #225692",
-"%.	c #122A9A",
-"&.	c #245E92",
-"*.	c #1A4E86",
-"=.	c #1E5696",
-"-.	c #1A569A",
-";.	c #1A4676",
-">.	c #1A4272",
-",.	c #2762A2",
-"'.	c #266EBD",
-").	c #1A467A",
-"!.	c #1E62AA",
-"~.	c #225AA2",
-"{.	c #1E4E86",
-"].	c #22528E",
-"^.	c #1A449E",
-"/.	c #1E56A2",
-"(.	c #226ABB",
-"_.	c #22569D",
-":.	c #225EAA",
-"<.	c #1A3E73",
-"[.	c #1E5296",
-"}.	c #1A4A82",
-"|.	c #225286",
-"1.	c #1A4276",
-"2.	c #1E5AA2",
-"3.	c #1A427A",
-"4.	c #1E5EA6",
-"5.	c #1D76A0",
-"6.	c #163683",
-"7.	c #2666A2",
-"8.	c #1A449A",
-"9.	c #163A6E",
-"0.	c #225E99",
-"a.	c #2266B2",
-"b.	c #0E2A5A",
-"c.	c #1A467E",
-"d.	c #1A4A8B",
-"e.	c #162E93",
-"f.	c #225A8E",
-"g.	c #12366C",
-"h.	c #1A3E6D",
-"i.	c #1A4E8A",
-"j.	c #265A8E",
-"k.	c #265E9E",
-"l.	c #1A4E97",
-"m.	c #16366A",
-"n.	c #265E99",
-"o.	c #22528A",
-"p.	c #265A94",
-"q.	c #162E8E",
-"r.	c #2262A6",
-"s.	c #1A4682",
-"t.	c #2662A7",
-"u.	c #225A92",
-"v.	c #265EA2",
-"w.	c #1E62AF",
-"x.	c #162E85",
-"y.	c #173E99",
-"z.	c #1E569E",
-"A.	c #122A96",
-"B.	c #1A4496",
-"C.	c #163E7B",
-"D.	c #1A4A99",
-"E.	c #0E2E61",
-"F.	c #1A4588",
-"G.	c #2672C7",
-"H.	c #16328A",
-"I.	c #266EC2",
-"J.	c #1E4A86",
-"K.	c #163E76",
-"L.	c #26568E",
-"M.	c #163A99",
-"N.	c #1A427F",
-"O.	c #163A82",
-"P.	c #1A82A9",
-"Q.	c #2262AA",
-"R.	c #163665",
-"S.	c #16349B",
-"T.	c #1E569A",
-"U.	c #26568A",
-"V.	c #2666A9",
-"W.	c #1E5286",
-"X.	c #123266",
-"Y.	c #225696",
-"Z.	c #266299",
-"`.	c #1A5292",
-" +	c #163A72",
-".+	c #1A569F",
-"++	c #1E528A",
-"@+	c #122E60",
-"#+	c #226EBF",
-"$+	c #1A4E92",
-"%+	c #225A96",
-"&+	c #1E729E",
-"*+	c #12269A",
-"=+	c #1A5696",
-"-+	c #163A78",
-";+	c #2676CA",
-">+	c #1E4676",
-",+	c #122E8E",
-"'+	c #162A8D",
-")+	c #1E467A",
-"c.).;.} 1.} >.>.>.>.>.>.>.;.) y 1.c.@ D D 2 & *.*.i.i.u u _ _ T ",
-"D ).).;.1.>.>.} >.) >.) ) >.>.C ;.).).D }.& I & & u u u , `.`._ ",
-",+q.q.M '+~ x.~ x.<.<.) O.Y ~ x.H.H.H.M e e ,+,+x A.x A.A.A.%.*+",
-"D z c.;.;.;.1.H >.} h.>.).@ ;.;.y ).y D s.D D & *.i.u , , , `._ ",
-"x q.q.a 1.).>+g E h.>+| h.g g |.y H.q.,+q.e t q.e.x A.- A.- A.- ",
-"P )+)+W.W.; ;.m . f f ;.>+>.| g y }.D D }.}.& *.*.++h , _ T T _ ",
-"g g + L )+] Q ; m | F ;.] ;.1.. W.D g J.I I *.*.u u , _ , _ _ =+",
-"%+L }.}.@ g 1.; . * < < z ] z 1.) N & }.g 5 e.t x t e.%.A.%.A.- ",
-"W.D 9.f z R.Q . $ >+g < k g ;.D D ; p {.J.i.*.l = u h T =+T =+# ",
-"3.).z ; g &.|.Q >.S . U.m N {.D o.g & ) p l u , s s h s _ T =+-.",
-"{.3.g D >+1 ).] R.f >.. z L.] ++W.++{.{.N y C , , $+M.%.%.*+%.*+",
-"++m.m.++|.; U.f Q ).g f |.P D 6 E.o.l l ++C y h h =.# =+=.=.-.7 ",
-"#.u.{.9.9.6 o.P b.Z.|.. E.j.o.{.] ++i.}.0.6 h s 2 i.2 ( ! ( { *+",
-"J.N g P E.. n.|.Q D z S ++{.D Y.c.%+r.}.}.i.T =.[.`.s `.# ! ! V ",
-"i.c.b.K {.g.N p.o.Q 9.z o.{.z {.++N.h %+r.).(  .=.=.T.`.=.7 2.[ ",
-"h I )+g.++P E.. 3 6 ].N.] {.o.h %+h p $.s # K # i ( ( 7 7  .( [ ",
-"h {.I 3.E.p.{.m.g.p.u.6 L n.u.{.K.=.9 T p # K =.*.( q q 7 V -.7 ",
-"++l l P c  +p.Q E.N 3 %+Y.L ++$.3 y ++T 0.}.d i i [.! T.7 V [ V ",
-"h l i.*.I C X.p.o.m.9.k.p.%+*.# # ].=.9 T.=.=.! 7 2.9 9 V V r.!.",
-"U ++++l l P c -+,.l E.N V.l ++K.N k.%+d $.( q T.7 2.q 4.{ r.-.Q.",
-"=.s s U i.l i.J.3.N.V.u.g. +9 # Y.p / 9 q q i.V q V 2.2.7 4.!.8 ",
-"[.].[.h h l = J.I E.K.K K -+p h = p d r.q r.q =+q 7 2.7 4.Q.@.4.",
-"Y.T [.s [.s h U U s.c I V.K C.= U q T. .2 W q V  .V V { J a.8 !.",
-"T.T.=.s s s U h U l l ' d q q p r.r.q Q.r.K W 2.q { Q.8 V 4.8 R ",
-"( T.T.=.[.=.s s s [.= c C.[.r.t.r.$+_.t.Q.q $+V V 8 Q.a.a.4 4 w.",
-"7 _.T.T.=.[.[.=.[.[.T `.d.C.2 Q.r./ 2 t.Q.2.V { Q.a.8 8 a.O O w.",
-"2.z._.T.T.T.T.=.=.[.=.=.[.2 p 7 V.Q./ $+= ~.W Q.` a.a.O a.O (.(.",
-"~.~.i z._.z.T.T.=.T.T.=.T.A $+/ `.8 ` 2 $+V @.Q.8 ..` ..O (.(.#+",
-":.W ~.4.~.7 7 2.i ~.2.~.~.~.2.T.l.l.z.a...{ .+O a.a.R @.(.#+(.G.",
-"Q.:.:.W J J J J 2.2.~.~.2.4.W 2./.A l.` o R .+.+@...#+#+R #+#+G.",
-"@.Q.:.:.4.4.J 4.~.2.W ~.W 4.:.4 4 J .+.+4 '...> > (.#+#+(.G.G.;+",
-"w.:.Q.:.Q.:.W W 4.4.W 4 W Q.@.w.@.4 :.J J (.(.(.4 w.w.(.G.;+G.#+"};
