@@ -3,6 +3,8 @@ tuxtype (1.7.4.dfsg1-2) UNRELEASED; urgency=low
   * Drop automake from build-depends. 
   * Install .mo files into /usr/share/locale/ so that translations become
     available. (Closes: #531753)
+  * Use the new upstream icon and .desktop file, thanks to Loïc Martin. 
+    (Closes: #530542) 
 
  -- Holger Levsen <holger@debian.org>  Thu, 21 May 2009 20:45:22 +0200
 
